Button alignment fixed

--- a/src/App.less
+++ b/src/App.less
@@ -566,11 +566,17 @@ footer {
 }
 
 .tutorial-content {
-  min-height: calc(100vh - 75px - 64px - 80px);
+  min-height: calc(100vh - 300px);
   // overflow-y: auto;
   font-family: "Verdana", Consolas, Monaco, "Andale Mono", "Ubuntu Mono",
     monospace;
   text-align: justify;
+}
+
+@media (max-width: 767px) {
+  .tutorial-content {
+    min-height: calc(100vh - 400px);
+  }
 }
 
 .ant-layout {
